app-repo/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coolad-frontend-svc
  namespace: coolad-app
  labels:
    app: coolad-frontend
spec:
  type: LoadBalancer
  selector:
    app: coolad-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
